Colaboratory を使用して作成しました

--- a/cpp_dynamicprogramming.ipynb
+++ b/cpp_dynamicprogramming.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_dynamicprogramming.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN9O6jnQwyjqcVsB9PWpthe",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyObdVQEAB8/0dpFTV7grt+0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,39 +45,132 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "定義を直接実装したプログラム\n",
+        "定義に基づいてプログラムを作成すると、次のようになる。\n",
+        "\n",
+        "int fib(unsigned int n) {\n",
+        "    switch (n) {\n",
+        "        case 0: return 0;\n",
+        "        case 1: return 1;\n",
+        "        default: return fib(n - 1) + fib(n - 2);\n",
+        "    }\n",
+        "}\n",
+        "例えば、このプログラムを使ってフィボナッチ数列の第5項を求める場合を考えてみる。このプログラムは再帰的に呼び出されるので、その様子を以下に示す。\n",
+        "\n",
+        "  fib(5) \n",
+        "= fib(4) + fib(3) \n",
+        "= (fib(3) + fib(2)) + (fib(2) + fib(1)) \n",
+        "= ((fib(2) + fib(1)) + (fib(1) + fib(0))) + ((fib(1) + fib(0)) + fib(1)) \n",
+        "= (((fib(1) + fib(0)) + fib(1)) + (fib(1) + fib(0))) + ((fib(1) + fib(0)) + fib(1)) \n",
+        "このように最終的に fib(0) と fib(1) の呼び出しに収束し、fib(0) と fib(1) の呼び出し回数の和が結果の値となる。\n",
+        "この方法を用いたフィボナッチ数列の計算量は {\\displaystyle O(2^{n})}O(2^{n}) の指数関数時間となる。\n",
+        "\n",
+        "動的計画法を利用したプログラム（ボトムアップ方式）\n",
+        "int fib(unsigned int n) {\n",
+        "    int memo[1000] = {0, 1}, i;\n",
+        "    for (i = 2; i <= n; i++) {\n",
+        "        memo[i] = memo[i - 1] + memo[i - 2];\n",
+        "    }\n",
+        "    return memo[n];\n",
+        "}\n",
+        "fib(n - 1) と fib(n - 2) を先に計算しておいた上で、fib(n) を計算している。この場合は先ほどの実装と異なり、\n",
+        "ループ部分の計算量は O(n) の多項式時間である。このように指数関数時間で行われる処理を、計算済みの結果を記録することにより多項式時間で処理できるように改良でき、計算時間を圧倒的に減らせる。\n",
+        "\n",
+        "動的計画法を利用したプログラム（トップダウン方式）\n",
+        "トップダウンで、メモ化を併用したやり方。fib(n) を計算するのに、fib(n - 1) と fib(n - 2) が必要だが、計算結果を配列 memo に保存して再利用している。\n",
+        "\n",
+        "#include <stdbool.h>\n",
+        "\n",
+        "int memo[1000] = {0, 1};\n",
+        "bool in_memo[1000] = {true, true};\n",
+        "\n",
+        "int fib(unsigned int n) {\n",
+        "    if (!in_memo[n]) {\n",
+        "        memo[n] = fib(n - 1) + fib(n - 2);\n",
+        "        in_memo[n] = true;\n",
+        "    }\n",
+        "    return memo[n];\n",
+        "}\n",
+        "近年は色々なプログラミング言語がメモ化を言語レベルでサポートしている。その機能を利用した場合、より簡単に書ける場合がある。例えば Groovy の場合、@Memoized を付けることでメモ化するが、下記のように、定義を直接実装したプログラムに @Memoized を付けると動的計画法になる。\n",
+        "\n",
+        "import groovy.transform.Memoized\n",
+        "\n",
+        "@Memoized\n",
+        "int fib(int n) {\n",
+        "    switch (n) {\n",
+        "        case 0: return 0\n",
+        "        case 1: return 1\n",
+        "        default: return fib(n - 1) + fib(n - 2)\n",
+        "    }\n",
+        "}\n",
+        "関連項目\n",
+        "分割統治法\n",
+        "メモ化\n",
+        "チャートパーサ - CYK法、アーリー法\n",
+        "ビタビアルゴリズム\n",
+        "貪欲法\n",
+        "DPマッチング\n",
+        "参照\n",
+        "^ Richard Bellman, An introduction to the theory of dynamic programming, The Rand Corporation, Santa Monica, Calif., 1953\n",
+        "^ Richard Bellman, The theory of dynamic programming, Bull. Amer. Math. Soc. 60 (1954), 503-515\n",
+        "表話編歴\n",
+        "アルゴリズム\n",
+        "表話編歴\n",
+        "数理最適化 • 最適化問題 : メソッド • ヒューリスティクス\n",
+        "典拠管理 ウィキデータを編集\t\n",
+        "BNE: XX543843BNF: cb11978098s (データ)GND: 4125677-3J9U: 987007567971605171LCCN: sh85040313NDL: 00571739\n",
+        "カテゴリ: オペレーションズリサーチ最適化アルゴリズムリチャード・E・ベルマン\n",
+        "案内メニュー\n",
+        "Katsu95i\n",
+        "アラート (0)\n",
+        "通知 (0件)\n",
+        "会話\n",
+        "下書き\n",
+        "個人設定\n",
+        "ベータ版\n",
+        "ウォッチリスト\n",
+        "投稿記録\n",
+        "ログアウト\n",
+        "ページノート\n",
+        "閲覧編集履歴表示ウォッチリストに追加\n",
+        "検索\n",
+        "Wikipedia内を検索\n",
+        "メインページ\n",
+        "コミュニティ・ポータル\n",
+        "最近の出来事\n",
+        "新しいページ\n",
+        "最近の更新\n",
+        "おまかせ表示\n",
+        "練習用ページ\n",
+        "アップロード (ウィキメディア・コモンズ)\n",
+        "ヘルプ\n",
+        "ヘルプ\n",
+        "井戸端\n",
+        "お知らせ\n",
+        "バグの報告\n",
+        "寄付\n",
+        "ウィキペディアに関するお問い合わせ\n",
+        "ツール\n",
+        "リンク元\n",
+        "関連ページの更新状況"
+      ],
+      "metadata": {
+        "id": "zJKiLE6IzI9C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "_N3UUBtYRqPW"
       },
       "outputs": [],
       "source": [
-        "logo\n",
-        "ITエンジニア向け総合求人・学習サービス「paiza」の開発者が、プログラミングやITエンジニアの転職などについて書いています。\n",
-        "\n",
-        "トップ > プログラミング > 定番アルゴリズム「DP（動的計画法）」をプログラミング練習問題集で学ぼう！\n",
-        "2021-03-19\n",
-        "定番アルゴリズム「DP（動的計画法）」をプログラミング練習問題集で学ぼう！\n",
-        "プログラミング\n",
-        "プログラミング-プログラミング学習\n",
-        "開発ネタ\n",
-        "開発ネタ-アルゴリズム\n",
-        "   \n",
-        "f:id:paiza:20210311135032j:plain\n",
-        "f:id:paiza:20210318110540p:plain こんにちは。paizaラーニングでコンテンツ制作をしている学生スタッフの工藤です。\n",
-        "\n",
-        "みなさん、「DP（Dynamic Programming、動的計画法）」って知っていますか？\n",
-        "\n",
-        "DPは代表的なアルゴリズムのひとつで、競技プログラミングの問題を解く際にも多く用いられます。そのため耳にしたことはあるかもしれませんが、慣れるまでは扱いが難しく実用性が分からないという方も多いと思います。\n",
-        "\n",
-        "ただし、ある程度問題を解いていくとパターンのようなものが見えてくるはずなので、たくさん問題に触れてみるのがおすすめです。\n",
-        "\n",
-        "そこで今回は、paizaラーニングのレベルアップ問題集に追加された「DPメニュー」を使って、DPの問題に慣れるための学習法を紹介していきます！\n",
-        "\n",
-        "\n",
         "DP（動的計画法）とは\n",
-        "本題の問題集の紹介に入る前に、DPとはどんなアルゴリズムなのか簡単にご紹介します。\n",
-        "\n",
-        "こういうときはひとまずWikipediaを見てみましょう。DPとはなにものかについてこう書かれています。\n",
+        "こういうときはひとまず Wikipediaを見てみましょう。DPとはなにものかについてこう書かれています。\n",
         "\n",
         "対象となる問題を複数の部分問題に分割し、部分問題の計算結果を記録しながら解いていく手法を総称してこう呼ぶ。\n",
         "（出典）動的計画法 - Wikipedia\n",
