Colaboratory を使用して作成しました

--- a/cpp_dynamicprogramming.ipynb
+++ b/cpp_dynamicprogramming.ipynb
@@ -6,7 +6,7 @@
       "name": "cpp_dynamicprogramming.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyObdVQEAB8/0dpFTV7grt+0",
+      "authorship_tag": "ABX9TyNhLIPo4Y/HKc+7h+IvLNYb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,6 +42,142 @@
       "metadata": {
         "id": "qQQagyqNRq6Y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 動的計画法によるフィボナッチ数列\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int fib(unsigned int n) {\n",
+        "    int memo[1000] = {0, 1}, i;\n",
+        "    for (i = 2; i <= n; i++) {\n",
+        "        memo[i] = memo[i - 1] + memo[i - 2];\n",
+        "    }\n",
+        "    return memo[n];\n",
+        "}\n",
+        "int main () {\n",
+        "    for (int i = 0; i < 10; i++) {\n",
+        "        cout << fib(i) << \" \";\n",
+        "    }\n",
+        "    cout << endl; \n",
+        "}"
+      ],
+      "metadata": {
+        "id": "X_HhaL0W2NJ_",
+        "outputId": "53b43ea7-be9f-4fa9-8021-7eb112a7d4e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "q3GW6JQ02oe8",
+        "outputId": "2e528125-d380-4955-c476-7d9ee662a22a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 1 1 2 3 5 8 13 21 34 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上のプログラムを理解するための実験\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "\n",
+        "int fib(unsigned int n) {\n",
+        "    int memo[1000] = {0, 1}, i;\n",
+        "    for (i = 2; i <= n; i++) {\n",
+        "        memo[i] = memo[i - 1] + memo[i - 2];\n",
+        "    }\n",
+        "    return memo[n];\n",
+        "}\n",
+        "int main () {\n",
+        "    vector<int> memo = {0, 1};\n",
+        "    for (int i = 2; i <= 10; i++) {\n",
+        "        memo[i] = memo[i - 1] + memo[i - 2];\n",
+        "    }\n",
+        "    for (int i = 0; i < 10; i++){\n",
+        "        cout << memo.at(i) << \" \";\n",
+        "    }\n",
+        "    cout << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "Fxh5VNvk3Lgj",
+        "outputId": "0c8fc0c9-2676-47bf-cdd6-43c48ed61242",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; echo  |./a.out"
+      ],
+      "metadata": {
+        "id": "6cCvKMHj3rhj",
+        "outputId": "a15807cf-e795-4629-a2af-a5e7bfa89c66",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[01m\u001b[Ktemp.cpp:\u001b[m\u001b[K In function ‘\u001b[01m\u001b[Kint main()\u001b[m\u001b[K’:\n",
+            "\u001b[01m\u001b[Ktemp.cpp:14:41:\u001b[m\u001b[K \u001b[01;31m\u001b[Kerror: \u001b[m\u001b[Kinvalid operands of types ‘\u001b[01m\u001b[Kvoid\u001b[m\u001b[K’ and ‘\u001b[01m\u001b[K__gnu_cxx::__alloc_traits<std::allocator<int> >::value_type {aka int}\u001b[m\u001b[K’ to binary ‘\u001b[01m\u001b[Koperator+\u001b[m\u001b[K’\n",
+            "         memo[i] = memo.push_back(i - 1) + memo[i - 2];\n",
+            "terminate called after throwing an instance of 'std::out_of_range'\n",
+            "  what():  vector::_M_range_check: __n (which is 2) >= this->size() (which is 2)\n",
+            "/bin/bash: line 1:   282 Done                    echo\n",
+            "       283 Aborted                 (core dumped) | ./a.out\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
