Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -6,8 +6,7 @@
       "name": "learncpp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyN0CKDOoR8i0Pp2UAFis5ZO",
+      "authorship_tag": "ABX9TyMpt6UCxzigdaNC0s5B55Uh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +56,7 @@
       ],
       "metadata": {
         "id": "ADvsIjo5PY0X",
-        "outputId": "88e35ab6-3c34-4e50-c679-d54aebf1121e",
+        "outputId": "a7b7d15a-ea4d-4ed2-b220-9d4baa0ec0f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -81,7 +80,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "-jTNMcEE-y3-",
-        "outputId": "17e9f8df-d603-4f24-ff71-fb493ea630c5",
+        "outputId": "1a7d4a1a-5cb1-4734-8559-af6a99200932",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -95,7 +94,7 @@
         "  cout << \"Hello World!\" << endl;\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +118,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "8Lf0COUH-9ol",
-        "outputId": "47faaab0-811f-408d-8242-074d242640ec",
+        "outputId": "db14db29-d741-45af-94b8-6b43ec6ae1eb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -127,7 +126,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +141,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "V7FCGvXToerV",
-        "outputId": "258fbbd6-138d-406d-9a98-97e5f1ce75d7",
+        "outputId": "8d3a2072-2814-48f3-8c49-c15ec633fbf9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -158,13 +157,13 @@
         "  cout << \"次の行\";\n",
         "}"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing temp.cpp\n"
+            "Overwriting temp.cpp\n"
           ]
         }
       ]
@@ -173,7 +172,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Gdy2RltWBMlU",
-        "outputId": "aa16c756-289d-42b0-9866-eef6085e59cc",
+        "outputId": "184d04de-f313-429a-ffae-30b2a661e403",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -181,7 +180,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +197,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "vHNrx0tRpuBf",
-        "outputId": "10352496-2208-4213-c4b5-cf74524bcdc1",
+        "outputId": "f2f187df-3df5-4587-e604-722e2e36a6ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -214,7 +213,7 @@
         "  for (int i = 0; i < 3; i++) cout << \"Hello World\" << endl;\n",
         "}\n"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +228,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "hxXfoxj8Bkb2",
-        "outputId": "e14b78f8-3b2c-431d-af53-9badd1b45bda",
+        "outputId": "d50bf23e-36e1-416f-9d6e-94ea5be39efa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -237,7 +236,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,13 +280,17 @@
       "metadata": {
         "id": "9xEHO9jxdjDe"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mc2my2c0es1D"
+        "id": "Mc2my2c0es1D",
+        "outputId": "efd27bfa-641a-4c93-bed0-ed9b777a6a39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# cout は文字列と数値だけを受け付ける\n",
@@ -300,19 +303,39 @@
         "  cout << myNum;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JRO5IbRYdIr8"
+        "id": "JRO5IbRYdIr8",
+        "outputId": "d5a8e919-7d47-480c-830d-77b36dd23e48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -326,7 +349,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3aRUXLCpIdJu"
+        "id": "3aRUXLCpIdJu",
+        "outputId": "d0cbd295-cfda-4d03-8bc3-3ecc5814b348",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# 変数は上書きできるか => できる。 immutable ではない\n",
@@ -340,25 +367,45 @@
         "  cout << myNum;\n",
         "}"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yCSbQFadIkgW"
+        "id": "yCSbQFadIkgW",
+        "outputId": "05cbc3cc-791c-4240-c278-b089321e0f88",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AyPpeOqOJAYm",
-        "outputId": "a6354d15-9faf-4277-d181-8a6c9d86d5d6",
+        "outputId": "cc3b37e2-531b-402a-cb7f-524ffb2c47d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -384,7 +431,7 @@
         "    cout << myBoolean << endl;\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1665,7 +1712,7 @@
         "    cout << a << endl;\n",
         "    cout << a.to_ullong() << endl; // ビットセットの内容を unsigned long long 整数に変換\n",
         "    string  b = \"12345\";\n",
-        "    int c = stoi(b);\n",
+        "    int c = stoi(b); // string to integer 変換\n",
         "    cout << c + 1 << endl; \n",
         "}"
       ],
