Colaboratory を使用して作成しました

--- a/learncpp.ipynb
+++ b/learncpp.ipynb
@@ -6,7 +6,8 @@
       "name": "learncpp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMpt6UCxzigdaNC0s5B55Uh",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMKUWTLw2sK0eXCrEiKDsSP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +62,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +95,7 @@
         "  cout << \"Hello World!\" << endl;\n",
         "}"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +127,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +158,7 @@
         "  cout << \"次の行\";\n",
         "}"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,7 +181,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +214,7 @@
         "  for (int i = 0; i < 3; i++) cout << \"Hello World\" << endl;\n",
         "}\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,7 +237,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,7 +281,7 @@
       "metadata": {
         "id": "9xEHO9jxdjDe"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +304,7 @@
         "  cout << myNum;\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -326,7 +327,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,15 +337,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "PyjR3UYGPK0w"
-      }
     },
     {
       "cell_type": "code",
@@ -367,7 +359,7 @@
         "  cout << myNum;\n",
         "}"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +382,7 @@
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,13 +408,12 @@
         "# include <bits/stdc++.h>\n",
         "using namespace std;\n",
         "\n",
-        "int main()\n",
-        "{\n",
-        "    int myNum = 5;            // Integer (whole number without decimals)\n",
-        "    double myFloatNum = 5.99; // Floating point number (with decimals)\n",
-        "    char myLetter = 'D';      // Character\n",
-        "    string myText = \"Hello\";  // String (text)\n",
-        "    bool myBoolean = true;    // Boolean (true or false)\n",
+        "int main() {\n",
+        "    int myNum = 5;            // 整数\n",
+        "    double myFloatNum = 5.99; // 浮動小数点数\n",
+        "    char myLetter = 'D';      // 文字\n",
+        "    string myText = \"Hello\";  // 文字列\n",
+        "    bool myBoolean = true;    // 真偽値 (true or false)\n",
         "\n",
         "    cout << myNum << endl;\n",
         "    cout << myFloatNum << endl;\n",
@@ -431,7 +422,7 @@
         "    cout << myBoolean << endl;\n",
         "}"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,7 +475,7 @@
         "using namespace std;\n",
         "\n",
         "int main() {\n",
-        "  int myAge = 35;\n",
+        "  int myAge = 71;\n",
         "  cout << \"I am \" << myAge << \" years old.\";\n",
         "}"
       ],
@@ -594,14 +585,13 @@
         "\n",
         "int main() {\n",
         "  // Good name\n",
-        "  int minutesPerHour = 60;\n",
+        "  int minutesPerHour = 60; // minutes_per_hour とするのが普通かも\n",
         "  \n",
         "  // OK, but not so easy to understand what m actually is\n",
         "  int m = 60;\n",
         "  \n",
         "  cout << minutesPerHour << endl;\n",
         "  cout << m;\n",
-        "  return 0;\n",
         "}"
       ],
       "execution_count": null,
@@ -622,13 +612,11 @@
       "cell_type": "code",
       "source": [
         "# C++ の変数名は camelCase(camel case) か、snake_case (snake case) か\n",
-        "# どちらの主張もある。 \n",
-        "# snake_case が多いみたい。\n",
-        "# しかし!!!! snake_case はめんどくさい。\n",
-        "# c++ 自体は camelCase を使っているので混ざることになる。\n",
-        "# snake_case の方が美しいが、混ざるのは美しくない。\n",
+        "# どちらの主張もある\n",
+        "# snake_case が多いみたい\n",
+        "# しかし!!!! snake_case はめんどくさい\n",
         "# 今の考え。snake_case の方が美しいので、将来、あるレベルに達したら snake_case に統一するかもしれないが、\n",
-        "# 学習段階は、どうせいつまでも学習段階なのだし、camelCase で統一する。"
+        "# 学習段階は、どうせいつまでも学習段階なのだし、camelCase で統一する"
       ],
       "metadata": {
         "id": "i5qsM6R8-Us7"
@@ -674,7 +662,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "80d11718-c6f4-49de-fbec-b68561105a94"
+        "outputId": "3457735b-4e8e-4ee6-9a6d-bd86dcce232d"
       },
       "source": [
         "%%writefile temp.cpp\n",
@@ -683,12 +671,12 @@
         "\n",
         "int main() {\n",
         "  const int minutesPerHour = 60;\n",
-        "  const float PI = 3.14;\n",
+        "  const float PI = M_PI; // 3.14159\n",
         "  cout << minutesPerHour << endl;\n",
         "  cout << PI;\n",
         "}\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,19 +694,19 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad1776c5-4bad-4440-99fe-51235dd92ef0"
+        "outputId": "96048e50-6774-4b76-fe1a-bfc14c2b6349"
       },
       "source": [
         "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "60\n",
-            "3.14"
+            "3.14159"
           ]
         }
       ]
@@ -726,7 +714,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fQHrZCjS770U"
+        "id": "fQHrZCjS770U",
+        "outputId": "9defd016-4bd5-44bc-cb0d-9faaf1440c5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# int num; とだけして出力すると何が入っているか実験\n",
@@ -744,51 +736,7 @@
         "  cout << num2 << endl;\n",
         "}\n"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cuYmm3yw7-kY"
-      },
-      "source": [
-        "!g++ temp.cpp; ./a.out"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_N9MptadGY1W",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "c89863c3-44d8-4734-f397-6e9ca6a278c3"
-      },
-      "source": [
-        "# 入力\n",
-        "# `cin` で標準入力を受け付ける\n",
-        "# 次のプログラムは本来はインタラクティブにユーザーが数字を入力することを想定しているが\n",
-        "# colab のコードセルでは、インプット待ちになってしまい具合が悪い。\n",
-        "# 実行例のように、echo とパイプで入力する数字を明示的にプログラムに渡す\n",
-        "%%writefile temp.cpp\n",
-        "# include <bits/stdc++.h>\n",
-        "using namespace std;\n",
-        "\n",
-        "int main() {\n",
-        "  int x, y;\n",
-        "  int sum;\n",
-        "  cout << \"Type a number: \";\n",
-        "  cin >> x;\n",
-        "  cout << \"Type another number: \";\n",
-        "  cin >> y;\n",
-        "  sum = x + y;\n",
-        "  cout << \"Sum is: \" << sum;\n",
-        "}"
-      ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,25 +750,132 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dKO1hxPIGZYP",
+        "id": "cuYmm3yw7-kY",
+        "outputId": "355969aa-bd13-4a67-b200-bc0bd97c3de2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "68e7e222-f935-4f18-d265-3beb98db0b39"
+        }
       },
       "source": [
-        "!g++ temp.cpp;  echo 3 7 |./a.out"
+        "!g++ temp.cpp; ./a.out"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Type a number: Type another number: Sum is: 10"
+            "519580902\n",
+            "\n",
+            "21848\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ランダムな数が欲しい時\n",
+        "%%writefile temp.cpp\n",
+        "# include <bits/stdc++.h>\n",
+        "using namespace std;\n",
+        "int main () {\n",
+        "    srand((unsigned)time(NULL));\n",
+        "    cout << rand()%10000 << endl;\n",
+        "}"
+      ],
+      "metadata": {
+        "id": "dhdSYbsdfZLM",
+        "outputId": "80daa8e6-e5fb-4999-96a0-b3ce83ba49d4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!g++ temp.cpp; ./a.out"
+      ],
+      "metadata": {
+        "id": "C_gKDaYUfozj",
+        "outputId": "6b4c6528-062b-4dee-d233-53d1a81a565d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3555\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_N9MptadGY1W",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6241c335-6c53-4715-edab-788d2e236d11"
+      },
+      "source": [
+        "# 入力\n",
+        "# `cin` で標準入力を受け付ける\n",
+        "# 次のプログラムは本来はインタラクティブにユーザーが数字を入力することを想定しているが\n",
+        "# colab のコードセルでは、インプット待ちになってしまい具合が悪い。\n",
+        "# echo とパイプで入力する数字を明示的にプログラムに渡す方式にする\n",
+        "# !g++ temp.cpp;  echo 3 7 |./a.out\n",
+        "\n",
+        "# %%writefile temp.cpp\n",
+        "# # include <bits/stdc++.h>\n",
+        "# using namespace std;\n",
+        "\n",
+        "# int main() {\n",
+        "#   int x, y;\n",
+        "#   int sum;\n",
+        "#   cout << \"Type a number: \";\n",
+        "#   cin >> x;\n",
+        "#   cout << \"Type another number: \";\n",
+        "#   cin >> y;\n",
+        "#   sum = x + y;\n",
+        "#   cout << \"Sum is: \" << sum;\n",
+        "# }"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.cpp\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ3"
+      ],
+      "metadata": {
+        "id": "cEMn-498jblj"
+      }
     },
     {
       "cell_type": "code",
@@ -1711,6 +1766,8 @@
         "    cout << z << endl;\n",
         "    cout << a << endl;\n",
         "    cout << a.to_ullong() << endl; // ビットセットの内容を unsigned long long 整数に変換\n",
+        "    cout << to_string(a.to_ullong()) << endl; // 2\n",
+        "    cout << a.to_string() << endl; // 010\n",
         "    string  b = \"12345\";\n",
         "    int c = stoi(b); // string to integer 変換\n",
         "    cout << c + 1 << endl; \n",
@@ -1721,9 +1778,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca3975ff-530b-45a8-d610-dab6c8e103ad"
+        "outputId": "2a641cf6-c3a1-4fa4-a54d-a6c72135ed9b"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,9 +1801,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "45c6d694-8286-4700-e68f-22c60b352c39"
+        "outputId": "cc72a8f9-6743-4120-98c3-9f06a6754b2f"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -1757,6 +1814,8 @@
             "111\n",
             "010\n",
             "2\n",
+            "2\n",
+            "010\n",
             "12346\n"
           ]
         }
