Colaboratory を使用して作成しました

--- a/cpp_atcoder100.ipynb
+++ b/cpp_atcoder100.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "cpp_atcoder100.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOjIZPC/f1iK8JnCbXDnw6W",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyODCjncOAdXWdASVO+PXp7K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -687,21 +688,21 @@
         "# ビット全探索 多重ループではうまくいかない全探索の 1 つです。詳しくは、こちらの記事を参照してください。\n",
         "# 順列全探索 多重ループではうまくいかない全探索の 1 つです。詳しくは、こちらの記事を参照してください。\n",
         "\n",
-        "# 全探索の問題 <= あとでやろう\n",
-        "# AtCoder Beginner Contest 144 B - 81 基礎の基礎です。\n",
-        "# AtCoder Beginner Contest 150 B - Count ABC 全探索というか、「全通り調べ上げます」。\n",
-        "# AtCoder Beginner Contest 122 B - ATCoder これも基本です。\n",
-        "# AtCoder Beginner Contest 136 B - Uneven Numbers これも基本です。\n",
-        "# AtCoder Beginner Contest 106 B - 105 これも基本です。\n",
-        "# AtCoder Beginner Contest 120 B - K-th Common Divisors 単純な考察が必要ですが、基本です。\n",
-        "# AtCoder Beginner Contest 057 C - Digits in Multiplication 探索通り数を頑張って減らします。\n",
-        "# AtCoder Beginner Contest 095 C - Half and Half 探索通り数を頑張って減らします。\n",
+        "# 全探索の問題 <= あとでやろう ABC = AtCoder Beginner Contest \n",
+        "# ABC144 B - 81 基礎の基礎です。\n",
+        "# ABC150 B - Count ABC 全探索というか、「全通り調べ上げます」。\n",
+        "# ABC122 B - ATCoder これも基本です。\n",
+        "# ABC136 B - Uneven Numbers これも基本です。\n",
+        "# ABC106 B - 105 これも基本です。\n",
+        "# ABC120 B - K-th Common Divisors 単純な考察が必要ですが、基本です。\n",
+        "# ABC057 C - Digits in Multiplication 探索通り数を頑張って減らします。\n",
+        "# ABC095 C - Half and Half 探索通り数を頑張って減らします。\n",
         "# 三井住友信託銀行プログラミングコンテスト2019 D - Lucky PIN 探索通り数を頑張って減らします。\n",
-        "# AtCoder Beginner Contest 128 C - Switches ビット全探索の基本です。\n",
-        "# AtCoder Beginner Contest 147 C - HonestOrUnkind2 ビット全探索の基本です。\n",
-        "# AtCoder Beginner Contest 145 C - Average Length 順列全探索の基本です。\n",
-        "# AtCoder Beginner Contest 150 C - Count Order 順列全探索で解けます。\n",
-        "# AtCoder Beginner Contest 054 C - One-stroke Path 順列全探索で解けます。\n",
+        "# ABC128 C - Switches ビット全探索の基本です。\n",
+        "# ABC147 C - HonestOrUnkind2 ビット全探索の基本です。\n",
+        "# ABC145 C - Average Length 順列全探索の基本です。\n",
+        "# ABC150 C - Count Order 順列全探索で解けます。\n",
+        "# ABC054 C - One-stroke Path 順列全探索で解けます。\n",
         "\n",
         "# 最後に、最も重要なことを書きます。これは、コンテストに出場することです。\n",
         "\n",
@@ -1408,7 +1409,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1431,7 +1432,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
